Link btw Frontend & Backend, updating url access dynamic page

--- a/ChocolateShopFrontEnd/src/main/webapp/assets/css/myapp.css
+++ b/ChocolateShopFrontEnd/src/main/webapp/assets/css/myapp.css
@@ -239,3 +239,9 @@ input:checked + .slider:before {
   color: white;
 }
 
+.list-group-item.active{z-index:2;color:#fff;background-color:#77815C;border-color:#77815C}
+
+a{
+	color: #003427;
+}
+
