logging with SLF4J + Custom Error Page (Spring MVC)

--- a/ChocolateShopFrontEnd/src/main/webapp/assets/css/myapp.css
+++ b/ChocolateShopFrontEnd/src/main/webapp/assets/css/myapp.css
@@ -301,7 +301,10 @@ table.dataTable thead .sorting:after {
 	content:"";
 }
 
-
+/* Custom errors */
+.jumbotron{
+	background-color: white;
+}
 
 
 
