--- a/ChocolateShopFrontEnd/src/main/webapp/assets/css/myapp.css
+++ b/ChocolateShopFrontEnd/src/main/webapp/assets/css/myapp.css
@@ -73,7 +73,7 @@ footer {
 	width:100%;
 	position:absolute;
 	bottom:20px;
-	height: 50px;
+	    padding-bottom: 0px !important;
 	padding-top: 10px !important;
 	
 }
@@ -129,7 +129,7 @@ footer {
 }
 
 input:checked + .slider {
-  background-color: seagreen;
+  background-color: #28a745;
 }
 
 input:focus + .slider {
@@ -339,5 +339,20 @@ table.dataTable thead .sorting:after {
   border-radius : .2rem;
 }
 
+.divider{   margin-top: 4px;
+    margin-bottom: 4px;
+    border: 0;
+    border-top: 1px solid rgba(0,0,0,0.1);
+}
 
+#dropdownMenu1:focus{
+    box-shadow: 0 0 0 0.2rem rgba(231, 217, 215, 0.64);	
+}
 
+.userMenuItem {
+	    padding-left: 5px;
+}
+
+.table-responsive{
+	overflow-x: auto;
+}
