Cart functions and views

--- a/ChocolateShopFrontEnd/src/main/webapp/assets/css/myapp.css
+++ b/ChocolateShopFrontEnd/src/main/webapp/assets/css/myapp.css
@@ -193,6 +193,15 @@ input:checked + .slider:before {
 	
 }
 
+#cart{
+	margin-top: 100px;
+}
+
+.cartImg{
+	width: 100px;
+	height: 100px;
+}
+
 
 /* cart checkout */
 .panel-title {display: inline;font-weight: bold;}
